[package]
name = "drillx-cuda"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "drillx_cuda"

[features]
default = ["cuda"]
benchmark = []
compiler = ["equix/compiler"]
cuda = ["cc"]
full = ["equix/full"]
solana = ["solana-program"]

[dependencies]
blake3 = "1.5"
equix = "0.1.4"
solana-program = { workspace = true, optional = true }
strum = { version = "0.26.2", features = ["derive"] }
bs58 = "0.5.1"
drillx = { workspace = true }
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16.0"

[build-dependencies]
cc = { version = "1.0", optional = true }

