[package]
name = "ore-cli"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A command line interface for ORE cryptocurrency mining."
documentation = "https://ore.supply"
homepage = "https://ore.supply"
repository = "https://github.com/regolith-labs/ore-cli"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[[bin]]
name = "cli-cuda"
path = "src/main.rs"

[features]
default = []
admin = []

[dependencies]
drillx-cuda = { workspace = true }
jito-protos = { workspace = true }
searcher-client = { workspace = true }
drillx = { workspace = true }
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.16"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
solana-metrics = { workspace = true }
futures = "0.3.30"
num_cpus = "1.16.0"
ore-api = { workspace = true }
ore-utils = { workspace = true }
rand = "0.8.4"
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
  "no-entrypoint",
] }
tokio = "1.35.1"
thiserror = "1.0.40"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
spl-memo = "3.0.1"
futures-util = "0.3.28"
# [patch.crates-io]
# drillx = { path = "../drillx/drillx" }
# ore-api = { path = "../ore/api" }
# ore-utils = { path = "../ore/utils" }

